adjusted some styles and added href to account in navbar

--- a/accountStyles.css
+++ b/accountStyles.css
@@ -7,7 +7,7 @@ body {
 }
 
 header {
-    background-color: #ff6600;
+/*     background-color: #ff6600; */
     color: #ffffff;
     padding: 20px;
     display: flex;
@@ -15,7 +15,32 @@ header {
     align-items: center;
 }
 
-nav ul {
+nav ul li {
+  list-style-type: none;
+  display: inline-block;
+  font-weight: normal;
+  padding: 25px;
+}
+
+nav a {
+  transition: color 0.3s ease-in-out;
+}
+
+a:link {
+  color: #000000;
+  text-decoration: none;
+}
+a:visited {
+  color: #000000;
+  text-decoration: none;
+}
+a:hover {
+  color: #656565;
+  text-decoration: none;
+} 
+
+
+/* nav ul {
     list-style: none;
     padding: 0;
     display: flex;
@@ -35,7 +60,7 @@ nav a {
 
 nav a:hover {
     color: #e5e5e5;
-}
+} */
 
 main {
     padding: 20px;
