--- a/src/exploreStyles.css
+++ b/src/exploreStyles.css
@@ -27,7 +27,7 @@ body {
 }
 
 header {
-    background-color: #ff6600;
+    background-color: #ee3300;
     color: #ffffff;
     padding: 20px;
     display: flex;
